--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -71,74 +71,73 @@
         app:layout_constraintTop_toTopOf="@+id/bottom_bar"
         app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/pig1"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="150dp"
-        android:text="Pig 1:"
-        android:textSize="29sp"
-        android:textStyle="bold"
-        app:fontFamily="monospace"
-        app:layout_constraintStart_toStartOf="@+id/recyclerView2"
-        app:layout_constraintTop_toBottomOf="@+id/top_bar" />
+<!--    <TextView-->
+<!--        android:id="@+id/pig1"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginLeft="20dp"-->
+<!--        android:layout_marginTop="150dp"-->
+<!--        android:text="Pig 1:"-->
+<!--        android:textSize="29sp"-->
+<!--        android:textStyle="bold"-->
+<!--        app:fontFamily="monospace"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/recyclerView2"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/top_bar" />-->
 
-    <EditText
-        android:id="@+id/pig1_name"
-        android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:ellipsize="none"
-        android:ems="10"
-        android:hint="Name"
-        android:inputType="textPersonName"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/pig1"
-        app:layout_constraintTop_toBottomOf="@+id/top_bar" />
+<!--    <EditText-->
+<!--        android:id="@+id/pig1_name"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="45dp"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginLeft="20dp"-->
+<!--        android:layout_marginTop="150dp"-->
+<!--        android:layout_marginEnd="20dp"-->
+<!--        android:layout_marginRight="20dp"-->
+<!--        android:ellipsize="none"-->
+<!--        android:ems="10"-->
+<!--        android:hint="Name"-->
+<!--        android:inputType="textPersonName"-->
+<!--        android:textSize="20sp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/pig1"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/top_bar" />-->
 
-    <TextView
-        android:id="@+id/pig2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:text="Pig 2:"
-        android:textSize="29sp"
-        android:textStyle="bold"
-        app:fontFamily="monospace"
-        app:layout_constraintStart_toStartOf="@+id/recyclerView2"
-        app:layout_constraintTop_toBottomOf="@+id/pig1" />
+<!--    <TextView-->
+<!--        android:id="@+id/pig2"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginLeft="20dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:text="Pig 2:"-->
+<!--        android:textSize="29sp"-->
+<!--        android:textStyle="bold"-->
+<!--        app:fontFamily="monospace"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/recyclerView2"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/pig1" />-->
 
-    <EditText
-        android:id="@+id/pig2_name"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:ems="10"
-        android:hint="Name"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/pig2"
-        app:layout_constraintTop_toBottomOf="@+id/pig1_name" />
+<!--    <EditText-->
+<!--        android:id="@+id/pig2_name"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginLeft="20dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_marginEnd="20dp"-->
+<!--        android:layout_marginRight="20dp"-->
+<!--        android:ems="10"-->
+<!--        android:hint="Name"-->
+<!--        android:inputType="textPersonName"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/pig2"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/pig1_name" />-->
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/pig1_name"
+        app:layout_constraintBottom_toTopOf="@+id/info_button"
         app:layout_constraintEnd_toEndOf="@+id/recyclerView2"
         app:layout_constraintStart_toStartOf="@+id/recyclerView2"
         app:layout_constraintTop_toBottomOf="@+id/top_bar"
@@ -146,43 +145,33 @@
 
     <Button
         android:id="@+id/info_button"
-        android:layout_width="170dp"
-        android:layout_height="170dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="75dp"
-        android:layout_marginEnd="225dp"
-        android:layout_marginRight="225dp"
-        android:layout_marginBottom="50dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="124dp"
         android:background="#3F51B5"
         android:includeFontPadding="false"
         android:text="How To Play"
         android:textColor="#FFFFFF"
-        android:textSize="35sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:typeface="monospace"
         app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
-        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/left_dice" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/about_button"
-        android:layout_width="170dp"
-        android:layout_height="170dp"
-        android:layout_marginStart="225dp"
-        android:layout_marginLeft="225dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
         android:layout_marginTop="75dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
         android:layout_marginBottom="50dp"
         android:background="#3F51B5"
         android:text="About The App"
         android:textColor="#FFFFFF"
-        android:textSize="35sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/recyclerView"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/right_dice" />
 
 <!--    <androidx.recyclerview.widget.RecyclerView-->
